<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/parkEmptyTV"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp"
            android:text="@string/enter_park_details"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/enter_note"
                    />
                <EditText
                    android:id="@+id/noteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/customer_name"
                    />
                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/cancelButton"
                            android:layout_gravity="center_vertical"
                            android:text="@string/cancel"
                            android:backgroundTint="#D63636"
                            android:layout_margin="10dp"
                            android:textSize="12sp"
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/parkButton"
                            android:backgroundTint="#6DBC3C"
                            android:text="@string/park"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
        </LinearLayout>

</LinearLayout>