<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/error_dialog_background"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:text="@string/park_dialog_description"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textColor="#787878"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center_vertical"
            android:layout_height="45dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/delete"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/noButton"
            android:layout_gravity="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/no"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/okButton"
            android:layout_gravity="end"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/OK"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
